--- a/src/app/main/pages/quality/analysis/records/records.component.html
+++ b/src/app/main/pages/quality/analysis/records/records.component.html
@@ -10,11 +10,13 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
+
     <mat-form-field appearance="outline" class="ms-kanban-toolbar__input"
       [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
       <mat-icon matPrefix>search</mat-icon>
       <input matInput type="text" [formControl]="searchControl" placeholder="Escribir" autocomplete="off">
     </mat-form-field>
+
     <span class="ms-fill"></span>
     <div class="ms-kanban-toolbar__counter">
       {{counter | number : '2.'}}
@@ -37,11 +39,11 @@
           </div>
           <div>
             <mat-menu #requestsMenu="matMenu">
-              <button mat-menu-item (click)="assignSpecialist(item)">
-                <mat-icon>how_to_reg</mat-icon> Asignar Esp.
-              </button>
               <button mat-menu-item (click)="detailDialog(item, item.eventType)">
                 <mat-icon>visibility</mat-icon> Detalle
+              </button>
+              <button mat-menu-item (click)="assignSpecialist(item)">
+                <mat-icon>how_to_reg</mat-icon> Asignar Esp.
               </button>
               <button mat-menu-item (click)="timeline(item)">
                 <mat-icon>timeline</mat-icon> Línea de tiempo
@@ -55,7 +57,7 @@
         <div class="info-box">
           <div class="lj"><span>OT {{item.workOrder}}</span> </div>
           <div class="info-row"> Componente: <span> {{item.component}}</span> </div>
-          <div class="info-row"> Taller: <span> {{item.partNumber}}</span></div>
+          <div class="info-row"> Taller: <span> {{item.workShop? item.workShop :'-'}}</span></div>
           <div class="info-row"> Fecha: <span> {{(item.createdAt['seconds'] * 1000) | date : 'dd/MM/yy hh:mm:ss'}}</span>
           </div>
         </div>
