--- a/src/app/main/pages/quality/analysis/tracing/tracing.component.html
+++ b/src/app/main/pages/quality/analysis/tracing/tracing.component.html
@@ -46,11 +46,11 @@
           </span>
           <div>
             <mat-menu #requestsMenu="matMenu">
-              <button mat-menu-item (click)="accCorrective(item)">
-                <mat-icon>fact_check</mat-icon> Acc Correctivas
-              </button>
               <button mat-menu-item (click)="detailDialog(item, item.eventType)">
                 <mat-icon>visibility</mat-icon> Detalle
+              </button>
+              <button mat-menu-item (click)="accCorrective(item)">
+                <mat-icon>fact_check</mat-icon> Acc Correctivas
               </button>
               <button mat-menu-item (click)="timeline(item)">
                 <mat-icon>timeline</mat-icon> Línea de tiempo
@@ -67,7 +67,7 @@
         <div class="info-box">
           <div class="lj" matTooltip="WOF" matTooltipPosition="above"><span>OT {{item.workOrder}}</span> </div>
           <div class="info-row"> Componente: <span> {{item.component}}</span> </div>
-          <div class="info-row"> Taller: <span> {{item.partNumber}}</span></div>
+          <div class="info-row"> Taller: <span> {{item.workShop}}</span></div>
           <div class="info-row"> Especialista: <span> {{item.specialist['name']}}</span></div>
           <div class="info-row"> Fecha: <span> {{(item.createdAt['seconds'] * 1000) | date : 'dd/MM/yy - hh:mm:ss'}} </span></div>
         </div>
