--- a/src/app/main/pages/spares/summary/summary.component.html
+++ b/src/app/main/pages/spares/summary/summary.component.html
@@ -83,7 +83,7 @@
             <ng-container matColumnDef="quantity">
                 <th mat-header-cell *matHeaderCellDef class="ms-table__header" mat-sort-header> Cantidad </th>
                 <td mat-cell *matCellDef="let element" class="ms-table__header">
-                    {{element.quantity ? element.quantity: '---'}}
+                    {{element.quantity ? element.quantity: 0}}
                 </td>
             </ng-container>
 
@@ -105,7 +105,7 @@
             <ng-container matColumnDef="stock">
                 <th mat-header-cell *matHeaderCellDef class="ms-table__header" mat-sort-header> Inventario </th>
                 <td mat-cell *matCellDef="let element" class="ms-table__header">
-                    {{element.stock ? element.stock : '---'}}
+                    {{element.stock ? element.stock : 0}}
                 </td>
             </ng-container>
 
@@ -140,9 +140,9 @@
             <tr mat-header-row *matHeaderRowDef="summaryDisplayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: summaryDisplayedColumns;"></tr>
         </table>
-        <mat-paginator #summaryPaginator class="ms-paginator" [pageSizeOptions]="[20, 30, 40]" showFirstLastButtons>
-        </mat-paginator>
     </div>
+    <mat-paginator #summaryPaginator class="ms-paginator" [pageSizeOptions]="[20, 30, 40]" showFirstLastButtons>
+    </mat-paginator>
     <ng-template #default>
         <div class="ms-default">
             <mat-progress-bar mode="indeterminate"></mat-progress-bar>
