--- a/src/app/main/pages/quality/analysis/results/results.component.html
+++ b/src/app/main/pages/quality/analysis/results/results.component.html
@@ -63,17 +63,25 @@
                     <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Orden de trabajo </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.workOrder}} </td>
                 </ng-container>
+
                 <ng-container matColumnDef="component">
                     <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Componente </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.component }} </td>
                 </ng-container>
+
                 <ng-container matColumnDef="numberPart">
                     <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Nro de parte </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.partNumber}} </td>
                 </ng-container>
+               
                 <ng-container matColumnDef="workShop" >
                     <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Taller </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.workShop? element.workShop: '-'}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="miningOperation" >
+                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Operacion minera </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.miningOperation? element.miningOperation: '-'}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="specialist">
