--- a/src/app/main/pages/quality/analysis/progress/progress.component.html
+++ b/src/app/main/pages/quality/analysis/progress/progress.component.html
@@ -49,7 +49,7 @@
                 <mat-icon>visibility</mat-icon> Detalle
               </button>
               <button mat-menu-item (click)="analysis(item)">
-                <mat-icon>add_task</mat-icon> Analisis
+                <mat-icon>add_task</mat-icon> Análisis
               </button>
               <button mat-menu-item (click)="timeline(item)">
                 <mat-icon>timeline</mat-icon> Línea de tiempo
