--- a/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.html
@@ -103,10 +103,10 @@
 
                     <br> 
 
-                    <mat-form-field appearance="outline" id="result"  class="container__form--input">
+                    <mat-form-field  appearance="outline" id="result"  class="container__form--input">
                         <mat-label>Calidad</mat-label>
                         <mat-select formControlName="quality">
-                            <mat-option *ngFor="let item of qualityList" [value]="item"><span
+                            <mat-option  *ngFor="let item of qualityList" [value]="item.code"><span
                                 style="color: #8f8a8a;">({{item.code}})</span> {{item.name}} 
                                 </mat-option>
                         </mat-select>
@@ -125,7 +125,7 @@
                     <mat-form-field appearance="outline" id="result"  class="container__form--input">
                         <mat-label>Costo</mat-label>
                         <mat-select formControlName="cost">
-                            <mat-option *ngFor="let item of costList" [value]="item"><span
+                            <mat-option *ngFor="let item of costList" [value]="item.code"><span
                                 style="color: #8f8a8a;">({{item.code}})</span> {{item.name}} 
                                 </mat-option>
                         </mat-select>
@@ -144,7 +144,7 @@
                     <mat-form-field appearance="outline" id="result"  class="container__form--input">
                         <mat-label>Frecuencia</mat-label>
                         <mat-select formControlName="frequency">
-                            <mat-option *ngFor="let item of frequencyList" [value]="item"><span
+                            <mat-option *ngFor="let item of frequencyList" [value]="item.code"><span
                                 style="color: #8f8a8a;">({{item.code}})</span> {{item.name}} 
                                 </mat-option>
                         </mat-select>
@@ -265,7 +265,7 @@
     <mat-dialog-actions align="end">
         <button mat-stroked-button color="warn" mat-dialog-close [disabled]="loading$ | async">CANCELAR</button>
         <button mat-stroked-button color="primary" (click)="save()" [disabled]="loading$ | async">GUARDAR</button>
-        <button mat-stroked-button color="primary" (click)="save()" [disabled]="loading$ | async">ENVIAR</button>
+        <button mat-stroked-button color="primary" (click)="saveAndSendEmail()" [disabled]="loading$ | async">ENVIAR</button>
     </mat-dialog-actions>
    
 </div>
