--- a/src/app/main/pages/quality/analysis/results/results.component.html
+++ b/src/app/main/pages/quality/analysis/results/results.component.html
@@ -1,8 +1,7 @@
 <div>
-    <div class="container-header">
-        
-        <mat-form-field appearance="outline" class="ms-toolbar__input"
-            [ngClass]="isMobile ? 'ms-toolbar__input--mobile' : 'ms-toolbar__input--desktop'">
+    <div class="ms-kanban-toolbar mat-elevation-z4">
+        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input"
+            [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
             <mat-label>FECHA/PERIODO</mat-label>
             <mat-date-range-input [formGroup]="dateForm" [rangePicker]="picker">
                 <input readonly matStartDate formControlName="start" placeholder="Fecha Inicio">
@@ -10,152 +9,160 @@
             </mat-date-range-input>
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-date-range-picker #picker></mat-date-range-picker>
-        </mat-form-field>        
+        </mat-form-field>
 
-        <mat-form-field appearance="outline"   >
-            <mat-icon matPrefix>local_convenience_store</mat-icon>
+        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input"
+            [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
+            <mat-icon matPrefix>location_on</mat-icon>
             <mat-select [formControl]="eventTypeControl">
                 <mat-option value="">Todos</mat-option>
                 <mat-option *ngFor="let item of eventType" [value]="item.code">
-                {{item.event}}
+                    {{item.event}}
                 </mat-option>
             </mat-select>
         </mat-form-field>
-        
-        <mat-form-field appearance="outline" class="container-header__search" [ngClass]="isMobile ? 'ms-toolbar__search--mobile' : 'ms-toolbar__search--desktop'">
+
+        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input"
+            [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
             <mat-label>Taller</mat-label>
             <mat-icon matPrefix>business</mat-icon>
             <input matInput type="text" [formControl]="workShopControl" placeholder="Taller" autocomplete="off">
         </mat-form-field>
 
-        <mat-form-field appearance="outline" class="container-header__search" [ngClass]="isMobile ? 'ms-toolbar__search--mobile' : 'ms-toolbar__search--desktop'">
-            <mat-label>Buscar</mat-label>
+        <mat-form-field appearance="outline" class="ms-kanban-toolbar__input"
+            [ngClass]="isMobile ? 'ms-kanban-toolbar__input--mobile' : 'ms-kanban-toolbar__input--desktop'">
             <mat-icon matPrefix>search</mat-icon>
-            <input matInput type="text" [formControl]="searchControl" placeholder="Buscar" autocomplete="off">
+            <input matInput type="text" [formControl]="searchControl" placeholder="Escribir" autocomplete="off">
         </mat-form-field>
-
-        <button mat-button class="container-header__downlad" (click)="download()" >
+        <span class="ms-fill"></span>
+        <button mat-button class="ms-kanban-toolbar__button"
+            [ngClass]="isMobile ? 'ms-kanban-toolbar__button--mobile' : 'ms-kanban-toolbar__button--desktop'"
+            (click)="download()">
             <mat-icon matPrefix>download</mat-icon>
             DESCARGAR
         </button>
-
     </div>
-    
+
     <div class="container-body">
         <!-- <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar> -->
-        <div class="container-table"  *ngIf="this.quality$ |async">
-            <table mat-table [dataSource]="settingsDataSource" >
+        <div class="container-table" *ngIf="this.quality$ |async">
+            <table mat-table [dataSource]="settingsDataSource">
 
                 <ng-container matColumnDef="date">
-                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Fecha </th>
-                    <td mat-cell *matCellDef="let element" class="table__cell"> 
-                        {{(element.createdAt.seconds * 1000) | date : 'dd/MM/yy'}} 
-                       <span style="color: #979797; font-size: 12px;"> {{(element.createdAt.seconds * 1000) | date : 'hh:mm:ss'}}  </span> 
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Fecha </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell">
+                        {{(element.createdAt.seconds * 1000) | date : 'dd/MM/yy'}}
+                        <span style="color: #979797; font-size: 12px;"> {{(element.createdAt.seconds * 1000) | date :
+                            'hh:mm:ss'}} </span>
                     </td>
                 </ng-container>
 
                 <ng-container matColumnDef="eventType">
-                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Tipo de evento </th>
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Tipo de evento </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.eventType }} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="workOrder">
-                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Orden de trabajo </th>
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Orden de trabajo </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.workOrder}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="component">
-                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Componente </th>
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Componente </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.component }} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="numberPart">
-                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Nro de parte </th>
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Nro de parte </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.partNumber}} </td>
                 </ng-container>
-               
-                <ng-container matColumnDef="workShop" >
-                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Taller </th>
-                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.workShop? element.workShop: '-'}} </td>
+
+                <ng-container matColumnDef="workShop">
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Taller </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.workShop? element.workShop:
+                        '-'}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="miningOperation" >
-                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Operacion minera </th>
-                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.miningOperation? element.miningOperation: '-'}} </td>
+                <ng-container matColumnDef="miningOperation">
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Operacion minera </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.miningOperation?
+                        element.miningOperation: '-'}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="specialist">
-                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Especialista </th>
-                    <td mat-cell *matCellDef="let element" align="center" class="table__cell"> {{element.specialist ? element.specialist.workingArea :'-'}}
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Especialista </th>
+                    <td mat-cell *matCellDef="let element" align="center" class="table__cell"> {{element.specialist ?
+                        element.specialist.workingArea :'-'}}
                     </td>
                 </ng-container>
 
                 <ng-container matColumnDef="accCorrective">
-                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader" > Acc. Correctivas </th>
-                    <td mat-cell *matCellDef="let element" class="table__cell">{{element.taskDone }}/ {{element.correctiveActions.length }} </td>
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Acc. Correctivas </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell">{{element.taskDone }}/
+                        {{element.correctiveActions.length }} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="riskLevel">
-                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Nivel de riesgo </th>
-                    <td mat-cell *matCellDef="let element" class="table__cell"> 
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Nivel de riesgo </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell">
                         {{element.evaluationAnalisisName? element.evaluationAnalisisName: '-'}}
                     </td>
                 </ng-container>
 
                 <ng-container matColumnDef="user">
-                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader" > Usuario</th>
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Usuario</th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.createdBy.name}} </td>
                 </ng-container>
 
-             <!--    <ng-container matColumnDef="state">
+                <!--    <ng-container matColumnDef="state">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell theader" > Estado </th>
                     <td mat-cell *matCellDef="let element" class="table__cell"> {{element.state}} </td>
                 </ng-container> -->
 
                 <ng-container matColumnDef="state">
-                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader">Estado</th>
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader">Estado</th>
                     <td mat-cell *matCellDef="let element" class="table__cell">
-                      <button mat-button [ngClass]="{
+                        <button mat-button [ngClass]="{
                                         'btn-state-registered': element.state==='registered'
                                        ,'btn-state-process': element.state==='process'
                                        ,'btn-state-tracing': element.state==='tracing'
                                        ,'btn-state-finalizado': element.state==='finalized'
                                       }">
-                        <span *ngIf="element.state==='registered'">Registrado</span>
-                        <span *ngIf="element.state==='process'">Asignado</span>
-                        <span *ngIf="element.state==='tracing'">Acc Correctivas</span>
-                        <span *ngIf="element.state==='finalized'">Finalizado</span>
-                      </button>
+                            <span *ngIf="element.state==='registered'">Registrado</span>
+                            <span *ngIf="element.state==='process'">Asignado</span>
+                            <span *ngIf="element.state==='tracing'">Acc Correctivas</span>
+                            <span *ngIf="element.state==='finalized'">Finalizado</span>
+                        </button>
                     </td>
                 </ng-container>
 
                 <ng-container matColumnDef="actions" stickyEnd>
-                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Acciones </th>
+                    <th mat-header-cell *matHeaderCellDef class="table__cell theader"> Acciones </th>
                     <td mat-cell *matCellDef="let element; let i = index" class="table__cell">
                         <ng-container>
-                          <mat-menu #rawMenu="matMenu">
-                            <button mat-menu-item (click)="accCorrective(element)">
-                                <mat-icon>fact_check</mat-icon> Acc Correctivas
-                            </button>
-                            <button mat-menu-item (click)="detailDialog(element, element.eventType)">
-                                <mat-icon>visibility</mat-icon> Detalle
-                              </button>
-                              <button mat-menu-item (click)="timeline(element)">
-                                <mat-icon>timeline</mat-icon> Línea de tiempo
-                              </button>              
-                              <button mat-menu-item (click)="edit(element, element.eventType)">
-                                <mat-icon>edit</mat-icon>Editar
-                              </button> 
-                              <button mat-menu-item (click)="deleteQuality(element)">
-                                <mat-icon>delete</mat-icon>Borrar
-                              </button> 
+                            <mat-menu #rawMenu="matMenu">
+                                <button mat-menu-item (click)="accCorrective(element)">
+                                    <mat-icon>fact_check</mat-icon> Acc Correctivas
+                                </button>
+                                <button mat-menu-item (click)="detailDialog(element, element.eventType)">
+                                    <mat-icon>visibility</mat-icon> Detalle
+                                </button>
+                                <button mat-menu-item (click)="timeline(element)">
+                                    <mat-icon>timeline</mat-icon> Línea de tiempo
+                                </button>
+                                <button mat-menu-item (click)="edit(element, element.eventType)">
+                                    <mat-icon>edit</mat-icon>Editar
+                                </button>
+                                <button mat-menu-item (click)="deleteQuality(element)">
+                                    <mat-icon>delete</mat-icon>Borrar
+                                </button>
 
-                          </mat-menu>
-                          <button mat-icon-button [matMenuTriggerFor]="rawMenu">
-                            <mat-icon>more_vert</mat-icon>
-                          </button>
+                            </mat-menu>
+                            <button mat-icon-button [matMenuTriggerFor]="rawMenu">
+                                <mat-icon>more_vert</mat-icon>
+                            </button>
                         </ng-container>
-                      </td>
+                    </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="settingsDisplayedColumns"></tr>
@@ -167,5 +174,5 @@
             </table>
         </div>
         <mat-paginator #settingsPaginator [pageSizeOptions]="[10,20,30]"></mat-paginator>
-    </div>                   
+    </div>
 </div>
