--- a/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.html
@@ -178,21 +178,16 @@
                                     <mat-error *ngIf="areas.controls[i].get('corrective').errors">
                                         Campo <strong>requerido.</strong>
                                     </mat-error>
-                                </mat-form-field>        
-                                
-                               <!--  (change)="changeAreaSelect($event,i)" 
-                                    (selectionChange)="onBookChange($event,i)"
-                                    (change)="changeArea($event,i)"
-                                -->
+                                </mat-form-field>     
 
                                 <mat-form-field *ngIf=" areaResponsable$ | async as areaResponsable" appearance="outline" id="result" class="form-corrective__input2">
                                     <mat-label>Area responsable</mat-label>
                                     <mat-select  formControlName="name"                            
                                         >
-                                        <mat-option  *ngFor="let name of areaResponsable" 
-                                            [value]="name" (click)="onclickArea(name, i)"                                                                                        
+                                        <mat-option  *ngFor="let item of areaResponsable" 
+                                            [value]="item.name" (click)="onclickArea(item, i)"                                                                                        
                                             >
-                                            {{name.name}}
+                                            {{item.name}}
                                         </mat-option>
                                     </mat-select>
                                     <mat-hint *ngIf="!(areaResponsable$ | async)">
