--- a/src/app/main/pages/andon/settings/settings.component.scss
+++ b/src/app/main/pages/andon/settings/settings.component.scss
@@ -62,8 +62,8 @@
     overflow-x: scroll;
     overflow-y: hidden;
     &__content-card {
-        margin-right: 80px;
-        width: 400px;
+        margin-right: 20px;
+        width: 350px;
         height: 246px;
         background: #ffffff;
         border: 1px solid #f1eeee;
@@ -132,6 +132,31 @@
         padding: 0px 30px 0px 30px;
     }
 
+}
+
+
+.container-diffusion{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    &__title{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        &--name{
+            font-size: 18px; 
+            margin-top: 10px; 
+            margin-left: 0;
+            padding-left: 0;
+            margin-right: 30px;
+        }
+        .mat-icon{
+            width: 30px;
+            height: 30px;
+            font-size: 30px;
+        }
+    }
+    
 }
 
 
