--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
@@ -32,6 +32,36 @@
         <mat-divider style="margin: 16px 0px"></mat-divider>
         <form [formGroup]="finalizeForm" autocomplete="off" class="form-container">
             <div class="form-container__form-inputs">
+
+                <mat-form-field *ngIf="filteredBroadcast$ | async as broadcasts" appearance="outline" id="result" class="timer-container__input">                     
+                    <mat-label>Enviar a</mat-label>
+                    <mat-chip-list #chipList aria-label="Fruit selection">
+                      <mat-chip
+                        *ngFor="let email of emailArray"
+                        [selectable]="selectable"
+                        [removable]="removable"
+                        (removed)="removeEmail(email)">
+                        {{email}}
+                        <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                      </mat-chip>
+                      <input
+                        placeholder="agregar nueva lista de difusion..."
+                        #emailInput
+                        [formControl]="broadcastControl"
+                        [matAutocomplete]="auto"
+                        [matChipInputFor]="chipList"
+                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                        (matChipInputTokenEnd)="addBroadcast($event)">
+                    </mat-chip-list>
+                    <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selectedBroadcast($event)">
+                      <mat-option *ngFor="let broadcast of broadcasts" [value]="broadcast">
+                        {{broadcast.name}}
+                      </mat-option>
+                    </mat-autocomplete>
+                </mat-form-field>
+
+                <mat-divider style="margin: 20px 0px;"></mat-divider>
+
                 <mat-form-field appearance="outline" id="result">
                     <mat-label>Resultado</mat-label>
                     <mat-select formControlName="result">
